Updated styling, added line user back and email and fixed signout button not showing

--- a/assets/src/scss/__global.scss
+++ b/assets/src/scss/__global.scss
@@ -105,6 +105,23 @@ $govuk-global-styles: true;
   border-bottom: 10px solid #005ea5;
 }
 
+ul#navigation {
+  font-size: 0.9em;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-align: right;
+  display: inline-block;
+  float: right;
+}
+ul#navigation li {
+  display: inline;
+  font-size: 16px;
+  overflow-wrap: break-word;
+}
+ul#navigation li a {
+  margin-left: 0.9em;
+}
+
 .js-signout {
   text-align: right;
   font-size: 16px;
@@ -117,6 +134,19 @@ $govuk-global-styles: true;
   border-bottom: 1px solid #bfc1c3;
   vertical-align: middle;
   padding-bottom: 20px;
+}
+
+.user {
+  display: inline;
+}
+
+.content {
+  display: inline;
+}
+
+.content-email {
+  display: inline;
+  padding-right: 20px;
 }
 
 
